commit after proposed changes

--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -1,204 +1,236 @@
+/*Reset CSS start*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+margin: 0;
+padding: 0;
+border: 0;
+font-size: 100%;
+font: inherit;
+vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+display: block;
+}
+body {
+line-height: 1;
+}
+ol, ul {
+list-style: none;
+}
+blockquote, q {
+quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+content: '';
+content: none;
+}
+table {
+border-collapse: collapse;
+border-spacing: 0;
+}
+
+/*Reset CSS end*/
 
 .main-container{
-	display: flex;
-	flex-direction:row;
-	flex-wrap:wrap;
-	width: 100%;	
-	border: 1px solid gray;
-	margin: auto;
+display: flex;
+flex-direction:row;
+flex-wrap:wrap;
+border: 1px solid gray;
 }
 
 .side-bar{
-	width: 252px;
-	background-color: white;
+width: 252px;
+background-color: white;
 }
 
 .search-box{
-	display: flex;
-    /* flex-direction: row; */
-    justify-content: center;
-    height: 32px;
-    width: 240px;
-    background-color: #a0a0a0;
-    /* padding: 4 0 4 0px; */
-    /* margin: 2 2 2 2px; */
+padding: 6px 0px 6px 3px;
+width: 237px;
+background-color: #a0a0a0;
+}
+
+.search-box:after {
+content: "";
+display: block;
+clear: both;
 }
 
 .input-search-box{
-	height:20px;
-	margin-top: 5px;
+padding: 0;
+float: left;
 }
 
 .btn-search-box{
-	background-color: #d83c3c;
-	width: 56px;
-	height:20px;
-	margin-top: 5px;
-	border: none;
+background-color: #d83c3c;
+width: 56px;
+height: 19px;
+border: none;
+padding: 0;
+float: left;
 }
 
 .dashboard{
-	display: flex;
-	flex-direction:column;
-	align-items:center;
-	height: 575px;
-	width: 240px;
-	background-color: #a0a0a0;
-	    padding: 0px 0 0px 0px;
-    margin: 2px 0px 0px 0px;
+display: flex;
+flex-direction:column;
+align-items:center;
+height: 575px;
+width: 240px;
+background-color: #a0a0a0;
+margin-top: 2px;
 }
 
-.lbl-dashboard-main{
-	padding:30px 0 0 0;
-	color: white;
-	font-size: 1.25em;
+span.lbl-dashboard-main{
+padding:32 0 12 0px;
+color: white;
+font-size: 20px;
+margin: 0px;
+border-bottom: 0px white;
 }
 
-.lbl-dashboard-campaign-tab{
-	width: 100%;
-	background-color:white;
-	border-right: 6px solid #d83c3c;
-    border-left: 0px white;
-    text-align: center;
-    padding: 9 0 9 0px;
-    margin: -8 0 -8 -6px;
-    color: #c5c3c3;
+span.lbl-dashboard-campaign-tab{
+width: 97%;
+background-color:white;
+border-right: 6px solid #d83c3c;
+border-bottom: 0px white;
+text-align: center;
+padding: 12 0 7 0px;
+color: #c5c3c3;
+margin:0px;
 }
 
 .lbl-dashboard{
-	margin:1px;
-	color: #c5c3c3;
-}
-
-.hr-dashboard{
-	background-color:white;
-	width:100%;
+margin:1px;
+color: #c5c3c3;
+border-bottom: 1px solid white;
+text-align: center;
+width: 100%;
+padding: 10 0 7 0px;
 }
 
 /*right side bar starts here*/
 
 .main-bar{
-	display: flex;
-	flex-direction:column;
-	width: 740px;
-	background-color: white;
-
-	margin-left: 4px;
+flex-direction:column;
+width: 740px;
+background-color: white;
+margin-left: 4px;
 }
 
 .breadcrumb-bar{
-	height: 32px;
-	width: 725px;
-	display: flex;
+height: 32px;
+width: 725px;
 }
 
 .lbl-mainbar-dashboard{
-		color:#13a0f8;
-		align-self: flex-end;
+color:#13a0f8;
 }
 
 .campaign-list{
-
-	width: 725px;
-	background-color: white;
+width: 725px;
+background-color: white;
 }
 
 .campaign-label-row{
-	display: flex;
-	height: 58px;
-	width: 100%;
-	background-color: white;
-	padding-bottom: 6px;
+width: 100%;
+background-color: white;
+padding-bottom: 20px;
+padding-top: 45px;
 }
 
 .lbl-recent-campaign{
-	color: #13a0f8;
-	align-self:flex-end;
-}
-
-.campaign-separator{
-	color: #666666;
-	align-self:flex-end;
-	padding: 2px;
+float: left;
+color: #13a0f8;
 }
 
 .lbl-showall{
-	color:#666666;
-	align-self:flex-end;
-		margin-left: 490px;
+float: right;
+color:#666666;
+border:none;
+background-color: white;
+outline:none;
+padding: 0;
 }
 
 .lbl-update{
-	color:#666666;
-	align-self:flex-end;
+float: right;
+color:#666666;
+border:none;
+background-color: white;
+outline:none;
+padding: 0;
+}
 
+.lbl-update:after{
+content:'|';
 }
 
 .campaign-field-row{
-
-	height: 34px;
-	width: 725px;
-	background-color: #d83c3c;
-	padding: 4px;
-	margin: 0 0 15 0px;
-	border-radius: 4px;
+height: 32px;
+width: 725px;
+background-color: #d83c3c;
+padding: 4px;
+border-radius: 4px;
 }
 
 .campaign-field-list{
-	/*display: flex;
-	flex-direction:row;
-	justify-content:space-between;*/
-	margin-top: 8px;
-	margin-left: -19px;
+padding-top: 9px;
 }
 
 .campaign-field-list>li{
-	color: white;
-	list-style: none;
-	float:left;
-
+color: white;
+list-style: none;
+float:left;
 }
 
 .campaign-data-table{
-/*	display: flex;
-	flex-direction:row;
-	justify-content:space-between;*/
-	overflow: scroll;
-	height: 465px;
-	width: 735px;
-	background-color: #b4b4b4;
-	margin-top: 10px;
-	
-	border-radius: 4px;
+overflow: auto;
+height: 461px;
+width: 735px;
+background-color: #b4b4b4;
+margin-top: 10px;
+border-radius: 4px;
 }
 
 .campaign-data-table>ul{
-	display: flex;
-	flex-direction:row;
-	justify-content:space-between;
-	list-style: none;
-	color: #666666;
-	margin-right: 30px;
-    margin-left: -15px;
+display: flex;
+flex-direction:row;
+justify-content:space-between;
+list-style: none;
+color: #666666;
+margin-top: 8px;
+padding-left: 3px;
 }
 
 .campaign-data-table>hr{
-	    border-color: #C7C5C7;
-	margin-top: -8px;
+    border-color: #C7C5C7;
 }
 
 .campaign-field-row>ul>li:nth-child(2){
-	margin-left: 112px;
+padding-left: 125px;
 }
 .campaign-field-row>ul>li:nth-child(3){
-	margin-left: 41px;
+padding-left: 59px;
 }
 .campaign-field-row>ul>li:nth-child(4){
-	margin-left: 20px;
+padding-left: 27px;
 }
 .campaign-field-row>ul>li:nth-child(5){
-	margin-left: 16px;
+padding-left: 26px;
 }
 .campaign-field-row>ul>li:nth-child(6){
-	margin-left: 72px;
+padding-left: 92px;
 }
