--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -61,13 +61,15 @@ background-color: white;
 padding: 6px 0px 6px 3px;
 width: 237px;
 background-color: #a0a0a0;
+overflow: hidden;
 }
 
-.search-box:after {
+/*.search-box:after {
 content: "";
 display: block;
 clear: both;
-}
+overflow: hidden;
+}*/
 
 .input-search-box{
 padding: 0;
