--- a/Position assignment/css/mainStyle.css
+++ b/Position assignment/css/mainStyle.css
@@ -52,6 +52,8 @@ top: 200px;
 left: 200px;
 height: 100px;
 width: 100px;
+border-radius: 10px 5% / 20px 30px;
+box-shadow: inset 2px 2px 5px black;
 }
 
 .dashboard{
