--- a/Position assignment/css/mainStyle.css
+++ b/Position assignment/css/mainStyle.css
@@ -45,6 +45,13 @@ border-spacing: 0;
 
 /*Reset CSS end*/
 
+@font-face{
+	font-family: "Bitstream Vera Serif Bold";
+    src: url("https://mdn.mozillademos.org/files/2468/VeraSeBd.ttf");
+    font-style: italic;
+    font-weight: 900;
+}
+
 .side-bar{
 position: relative;
 border:2px solid gray;
@@ -52,7 +59,7 @@ top: 200px;
 left: 200px;
 height: 100px;
 width: 100px;
-border-radius: 10px 5% / 20px 30px;
+border-radius: 10px 30px;
 box-shadow: inset 2px 2px 5px black;
 }
 
@@ -66,6 +73,7 @@ width: 20px;
 }
 
 .dashboard-second{
+font-family: "Bitstream Vera Serif Bold";
 position: absolute;
 border:2px solid red;
 top: 40px;
