--- a/animation assignment/css/mainStyle.css
+++ b/animation assignment/css/mainStyle.css
@@ -45,48 +45,54 @@ border-spacing: 0;
 
 /*Reset CSS end*/
 
-.side-bar{
-position: relative;
-border:2px solid gray;
-top: 400px;
-left: 400px;
-height: 400px;
-width: 400px;
-background:repeating-linear-gradient(45deg, transparent, blue 25px, red 50px);
-animation-name:outerboxmover;
-animation-duration:10s;
+.side-bar {
+    position: relative;
+    border: 2px solid gray;
+    top: 400px;
+    left: 400px;
+    height: 400px;
+    width: 400px;
+    background: repeating-linear-gradient(45deg, transparent, blue 25px, red 50px);
+    animation-name: outerboxmover;
+    animation-duration: 10s;
 }
-
-.dashboard{
-position: absolute;
-border:2px solid yellow;
-top: 0px;
-left: 0px;
-height: 20px;
-width: 20px;
-animation-name:boxmover;
-animation-duration:10s;
+.dashboard {
+    position: absolute;
+    border: 2px solid yellow;
+    top: 0px;
+    left: 0px;
+    height: 20px;
+    width: 20px;
+    animation-name: boxmover;
+    animation-duration: 10s;
 }
-
-@keyframes boxmover{
-	0%{
-		left:0px; top:0px;
-	}
-	25%{
-		left:376px; top:0px;
-	}
-	50%{
-		left:376px; top:378px;
-	}
-	75%{
-		left:0px; top:378px;
-	}
-	100%{
-		left:0px; top:0px;
-	}
+@keyframes boxmover {
+    0% {
+        left: 0px;
+        top: 0px;
+    }
+    25% {
+        left: 376px;
+        top: 0px;
+    }
+    50% {
+        left: 376px;
+        top: 378px;
+    }
+    75% {
+        left: 0px;
+        top: 378px;
+    }
+    100% {
+        left: 0px;
+        top: 0px;
+    }
 }
-
-@keyframes outerboxmover{
-	from{transform:rotate(0deg);}
-	to{transform:rotate(360deg);}
+@keyframes outerboxmover {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
