Edit section is done working on update action

--- a/applicationdevelopment/assets/css/style.css
+++ b/applicationdevelopment/assets/css/style.css
@@ -30,6 +30,16 @@ table {
 	border-spacing: 0;
 	border-collapse: collapse;
 }
+.update-btn {
+    background-color: #fff;
+    border: 1px solid #aaa;
+    font-size: 11px;
+    padding: 0px 5px;
+}
+.disable{
+	background-color: #ccc;
+	pointer-events: none;
+}
 
 .wrapper {
 	width: 980px;
@@ -101,6 +111,7 @@ table {
 	border: 1px solid #d8d8d8;
 	text-align: left;
 	min-height: 38px;
+	position: relative;
 }
 .action-col .cell:first-child {
 	min-height: 76px;
@@ -113,6 +124,9 @@ table {
 	border: none;
 	padding: 8px 10px;
 	font-size: 14px;
+	position: absolute;
+	left: 0;
+	top: 0;
 }
 .edit-input { display: none;}
 .data-table .cell.active span.content {
