--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -429,8 +429,7 @@ th {
 /*normalize.css end*/
 
 .main-container {
-  width: 60%;
-  margin: 30px 50px;
+  margin: 30px 300px;
 }
 .nav-row {
   background-color: #d9d9d9;
@@ -443,36 +442,26 @@ th {
 .nav-list li {
   float: left;
   list-style: none;
-  text-decoration: none;
   padding: 9px 43px 10px 6px;
-  background-color: #BDBDBD;
+  background:linear-gradient(to bottom,#BDBDBD, #DADADA 40%, #BDBDBD);
   border-right: 1px solid #8D8383;
 }
-.nav-list li:first-child {
+.nav-list li:active{
   background: linear-gradient(to bottom, white, #E1E1E1 96%);
 }
-.nav-row:after {
+.clearfix:after{
   content: "";
   display: block;
   clear: both;
   overflow: hidden;
 }
-.nav-list:after {
-  content: "";
-  display: block;
-  clear: both;
-  overflow: hidden;
-}
-.nav-list a {
+.nav-list a{
   text-decoration: none;
   text-align: center;
   text-shadow: 0px 2px 1px white;
   color: black;
 }
-a:visited {
-  color: black;
-}
-.tbl-field,td {
+.tbl-field{
   width: 100%;
 }
 td{
@@ -541,6 +530,6 @@ td{
   padding-top: 20px;
 }
 .main-template-body{
-  height:500px;
+  max-height:500px;
   overflow: auto;
 }
