--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -418,7 +418,6 @@ optgroup {
  */
 
 table {
-  border-collapse: collapse;
   border-spacing: 0;
 }
 
@@ -444,7 +443,7 @@ th {
   list-style: none;
   padding: 9px 43px 10px 6px;
   background:linear-gradient(to bottom,#BDBDBD, #DADADA 40%, #BDBDBD);
-  border-right: 1px solid #8D8383;
+  border-right: 1px solid #B5B5B5;
 }
 .nav-list li:active{
   background: linear-gradient(to bottom, white, #E1E1E1 96%);
@@ -465,7 +464,7 @@ th {
   width: 100%;
 }
 td{
-  border: 1px solid gray;
+  border: 1px solid #C7C2C2;
 }
 .td-field-class {
   width: 20%;
@@ -473,14 +472,17 @@ td{
   background-color: #E1E1E1;
   color: #5A5A5A;
   padding: 5px 0px 0px 12px;
+  border-top: 0px;
+  border-right: 0px;
 }
 .td-first-field {
   width: 12%;
   text-align: center;
   vertical-align: top;
   border-top: 1px solid #E1E1E1;
-  border-left: none;
+  border-left: 0px;
   padding: 5px 0px 0px 0px;
+  border-right: 0px;
 }
 .td-description-field {
   width: 28%;
@@ -488,10 +490,14 @@ td{
 .input-table-field {
   width: 100%;
   border: none;
+  padding: 5px;
 }
 #first-field-row .td-field-class {
   height: 44px;
   border-bottom: 0px;
+}
+#first-field-row .td-field-class:last-child{
+  border-right: 0px;
 }
 .td-input-field-class {
   width: 20%;
@@ -499,8 +505,12 @@ td{
   background-color: #E1E1E1;
   color: #5A5A5A;
   padding: 0px;
+  border-right:0px;
 }
 .td-template-class {
+  border-right: 0px;
+  border-top: 0px;
+  border-bottom: 0px;
   width: 20%;
   color: #5A5A5A;
   padding-left: 12px;
