--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -442,7 +442,7 @@ th {
   float: left;
   list-style: none;
   padding: 9px 43px 10px 6px;
-  background:linear-gradient(to bottom,#BDBDBD, #DADADA 40%, #BDBDBD);
+  background:linear-gradient(to bottom,#B9B9B9, #BBBBBB 40%, #B9B9B9);
   border-right: 1px solid #B5B5B5;
 }
 .nav-list li:active{
